--- a/teleport/cert.conf
+++ b/teleport/cert.conf
@@ -1,3 +1,4 @@
+#Ce fichier est ici au cas ou le script ne l'intègre pas. Modifier les informations nécéssaire
 [req]
 default_bits       = 2048                  # Taille de la clé RSA : 2048 bits (standard recommandé)
 distinguished_name = req_distinguished_name # Section contenant les infos du sujet du certificat (DN)
@@ -6,7 +7,7 @@ x509_extensions    = v3_req                # Extensions à inclure si on génèr
 prompt             = no                    # Ne pas demander les infos à l'utilisateur (valeurs fixes ci-dessous)
 
 [req_distinguished_name]
-CN = teleport.picinformatique.com          # Nom commun (Common Name) : nom DNS du serveur
+CN = teleport.picinformatique.com          # Nom commun (Common Name) : nom DNS du serveur (modifier ça)
 
 [req_ext]
 subjectAltName = @alt_names                # Extension SAN (Subject Alternative Name) pour la CSR
@@ -15,5 +16,5 @@ subjectAltName = @alt_names                # Extension SAN (Subject Alternative 
 subjectAltName = @alt_names                # Extension SAN pour un certificat auto-signé
 
 [alt_names]
-DNS.1   = teleport.picinformatique.com     # SAN de type DNS : nom de domaine alternatif accepté
-IP.1    = 192.168.100.85                   # SAN de type IP : adresse IP alternative acceptée
+DNS.1   = teleport.picinformatique.com     # SAN de type DNS : nom de domaine alternatif accepté (modifier ça)
+IP.1    = 192.168.100.85                   # SAN de type IP : adresse IP alternative acceptée (modifier ça)
