--- a/guacamol/docker-compose.yml
+++ b/guacamol/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       MYSQL_ROOT_PASSWORD: some_root_password
       MYSQL_DATABASE: guacamole_db
       MYSQL_USER: guacamole_user
-      MYSQL_PASSWORD: some_password
+      MYSQL_PASSWORD: some_password #A changer
     volumes:
       - guac-mysql:/var/lib/mysql
 
@@ -31,9 +31,9 @@ services:
       MYSQL_USER: guacamole_user
       MYSQL_PASSWORD: some_password
       GUACAMOLE_HOME: /guac-home
-      TOTP_ENABLED: "true"
+      TOTP_ENABLED: "true" #MFA
     ports:
-      - "8080:8080"
+      - "8080:8080" #Ajoutez 127.0.0.1: devant si tunel cloudflare
     volumes:
       - guac-home:/guac-home
 
